<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DescriptionActivity">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="220dp">
            <ImageView
                android:id="@+id/description_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/movie_title"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:id="@+id/description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/colorCategoriesGroupText"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/movie_date"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:id="@+id/description_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/colorCategoriesGroupText"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/movie_lang"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:id="@+id/description_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/colorCategoriesGroupText"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/movie_average"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:id="@+id/description_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/colorCategoriesGroupText"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:fontFamily="@font/robotobold"
                    android:text="@string/movie_adults"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:id="@+id/description_adults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/colorCategoriesGroupText"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotobold"
            android:text="@string/movie_overview"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:id="@+id/description_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotolight"
            android:textColor="@color/colorCategoriesGroupText"
            />
    </LinearLayout>

</LinearLayout>